--- a/bookshelf-client/package.json
+++ b/bookshelf-client/package.json
@@ -13,7 +13,9 @@
     "tailwindcss": "^1.2.0"
   },
   "scripts": {
-    "start": "postcss src/styles.css --output src/tailwind.css && react-scripts start",
+    "start": "run-p start:*",
+    "start:react": "react-scripts start",
+    "start:styles": "postcss src/styles.css --output src/tailwind.css --watch",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -35,6 +37,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^9.7.4",
+    "npm-run-all": "^4.1.5",
     "postcss-cli": "^7.1.0"
   }
 }
