--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 coreapi==2.3.3
 Django==2.2.10
+django-extensions==2.2.8
 django-heroku==0.3.1
 django-rest-swagger==2.2.0
 djangorestframework==3.10.3
